# nonlinear_benchmarks

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: split visualization.ipynb
nonlinear_benchmarks/: __init__.py  benchmarks.py  error_metrics.py  not_splitted_benchmarks.py  utilities.py
submission_examples/: CED.py  Cascaded_Tanks.py  EMPS.py  WienerHammerBenchMark.py  silverbox.py  simple_model.py
