[metadata]
name = nonlinear_benchmarks
version = 0.0.2
author = Gerben Beintema
author_email = g.i.beintema@tue.nl
description = The official dataload for http://www.nonlinearbenchmark.org/
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GerbenBeintema/nonlinear_benchmarks
project_urls =
    Bug Tracker = https://github.com/GerbenBeintema/nonlinear_benchmarks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    tqdm
    progressbar
    scipy
    requests
    rarfile


[options.packages.find]
exclude = examples
